Creating password reset template in staff app.

--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>{{title}}</title>
 
     <!-- Custom fonts for this template-->
@@ -343,7 +342,7 @@
                                     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         
-                                        <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.username}}</span>
+                                        <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.email}}</span>
                                         <img class="img-profile rounded-circle"
                                             src="/media/{{user.staff.profile_pic}}">
                                     </a>
