--- a/doctors/templates/doctors/pages/add_pet.html
+++ b/doctors/templates/doctors/pages/add_pet.html
@@ -36,7 +36,7 @@
                             </select>
                         {% endif %}
                         {% if fields.name == "added_by" %}
-                            <input type="{{fields.field.widget.input_type}}" value = "{{request.user.username}}" id = "{{fields.name}}" name = "{{fields.name}}" required class="form-control">
+                            <input type="{{fields.field.widget.input_type}}" value = "{{request.user.email}}" id = "{{fields.name}}" name = "{{fields.name}}" required class="form-control">
                         {% endif %}
                     </div>
                 {% endfor %}
