--- a/doctors/templates/doctors/pages/staff_profile.html
+++ b/doctors/templates/doctors/pages/staff_profile.html
@@ -7,9 +7,7 @@
             <a href="/media/{{staff.profile_pic}}"><div class="thumb-lg member-thumb mx-auto"><img src="/media/{{staff.profile_pic}}" class="rounded-circle img-thumbnail img-fluid" alt="profile-image"></div></a>
             <div class="">
                 
-                <h4>{{staff.username}}</h4>
-
-                <p class="text-muted">{{staff.email}}</p>
+                <h4>{{staff.email}}</h4>
             </div>
         </div>
     </div>
