--- a/staff/templates/staff/pages/customers_profile.html
+++ b/staff/templates/staff/pages/customers_profile.html
@@ -7,9 +7,8 @@
             <a href="/media/{{customer.profile_pic}}"><div class="thumb-lg member-thumb mx-auto"><img src="/media/{{customer.profile_pic}}" class="rounded-circle img-thumbnail img-fluid" alt="profile-image"></div></a>
             <div class="">
                 
-                <h4>{{customer.username}}</h4>
                 <a class="dropdown-item" style = "border-radius: 10px;" href="#" id = 'email' data-toggle="modal" data-target="#sent_email_modal">
-                    {{customer.email}}
+                    <h4>{{customer.email}}</h4>
                 </a>
                 <div style = "background-color: none; border-radius: 5px;" id = "progress">
                     
