--- a/doctors/templates/doctors/pages/add_staff.html
+++ b/doctors/templates/doctors/pages/add_staff.html
@@ -6,9 +6,9 @@
         <div class = "container">
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token%}
-                {% if error_message %}
+                {% if form.errors %}
                     <div class = "alert alert-danger">
-                        {{ error_message }}
+                        {{ form.errors }}
                     </div>
                 {% endif %}
                 {% if success_message %}
@@ -20,32 +20,32 @@
                         <div class="form-group row" style = "margin-bottom:10px">
                             <label for="{{ fields.name }}" class="col-sm-3 col-form-label">{{ fields.label}} </label>
                             <div class="col-sm-8">
-                                <input style="height: auto;" type="{{ fields.field.widget.input_type }}" {% if fields.is_bound %} value = "{{fields.name.value}}" {% endif %} name = "{{ fields.name }}" class="form-control" id="{{ fields.name }}" >
+                                <input style="height: auto;" required type="{{ fields.field.widget.input_type }}" {% if fields.is_bound %} value = "{{fields.name.value}}" {% endif %} name = "{{ fields.name }}" class="form-control" id="{{ fields.name }}" >
                             </div>
                         </div>
                 {% endfor %}
                 <div class="form-group row" style = "margin-bottom:10px">
                     <label for="" class="col-sm-3 col-form-label">Profile Pic</label>
                     <div class="col-sm-8">
-                        <input style="height: auto;" type="file"  class="form-control" name ="profile_pic"  id="profile_pic" >
+                        <input style="height: auto;" required type="file"  class="form-control" name ="profile_pic"  id="profile_pic" >
                     </div>
                 </div>
                 <div class="form-group row" style = "margin-bottom:10px">
                     <label for="" class="col-sm-3 col-form-label">Contact Number</label>
                     <div class="col-sm-8">
-                        <input style="height: auto;" type="text"  class="form-control" name ="contact_number"  id="contact_number" >
+                        <input style="height: auto;" required type="text"  class="form-control" name ="contact_number"  id="contact_number" >
                     </div>
                 </div>
                 <div class="form-group row" style = "margin-bottom:10px">
                     <label for="" class="col-sm-3 col-form-label">Address Barangay</label>
                     <div class="col-sm-8">
-                        <input style="height: auto;" type="text"  class="form-control" name ="address_barangay"  id="address_barangay" >
+                        <input style="height: auto;" required type="text"  class="form-control" name ="address_barangay"  id="address_barangay" >
                     </div>
                 </div>
                 <div class="form-group row" style = "margin-bottom:10px">
                     <label for="" class="col-sm-3 col-form-label">Address Municipality</label>
                     <div class="col-sm-8">
-                        <input style="height: auto;" type="text"  class="form-control" name ="address_municipality"  id="address_municipality" >
+                        <input style="height: auto;" required type="text"  class="form-control" name ="address_municipality"  id="address_municipality" >
                     </div>
                 </div>
                 <div class="form-group row" style = "margin-top:10px;">
