--- a/doctors/templates/doctors/pages/customer_profile.html
+++ b/doctors/templates/doctors/pages/customer_profile.html
@@ -7,9 +7,8 @@
                 <a href="/media/{{customer.profile_pic}}"><div class="thumb-lg member-thumb mx-auto"><img src="/media/{{customer.profile_pic}}" class="rounded-circle img-thumbnail img-fluid" alt="profile-image"></div></a>
                 <div class="">
                     
-                    <h4>{{customer.username}}</h4>
                     <a class="dropdown-item" style = "border-radius: 10px;" href="#" id = 'email' data-toggle="modal" data-target="#sent_email_modal">
-                        {{customer.email}}
+                        <h4>{{customer.email}}</h4>
                     </a>
                     <div style = "background-color: none; border-radius: 5px;" id = "progress">
                         
@@ -40,7 +39,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLabel">Send Email</h5>
-              <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+              <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">X</button>
             </div>
             <form></form>
                 <div class="modal-body">
