--- a/staff/templates/staff/auth/login.html
+++ b/staff/templates/staff/auth/login.html
@@ -26,7 +26,7 @@
           <img class = "logo" style = "margin:auto" src="{% static 'Images/LOGO.png' %}" alt="BEASTFRIEND LOGO">
         </div>
       </nav>
-      <div class="container-fluid">
+      <div class="container-fluid"> 
         <br>
         <br>
         <div class="container">
@@ -59,7 +59,7 @@
                          <label for="inputPassword" class="col-sm-3 col-form-label text-end"></label>
                          <div class="col-sm-8">
                            <input type="submit" class="btn bg-success form-control" value = "Login">
-                           <a class = "forgot-password" href="">Forgot Password?</a>
+                           <a class = "forgot-password" href="{% url 'staff:password_reset_view' %}">Reset Password?</a>
                          </div>
                        </div>
                    </form>
