--- a/staff/templates/staff/pages/add_customer.html
+++ b/staff/templates/staff/pages/add_customer.html
@@ -1,14 +1,14 @@
 {% extends 'staff/staff_base_layout/layout.html' %}
  
-{% block content %}
+{% block content %} 
     <div class="container">
         <h2 class = "page-header">Add Customer</h2>
         <div class = "container">
             <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token%}
-                {% if error_message %}
+                {% if form.errors %}
                     <div class = "alert alert-danger">
-                        {{ error_message }}
+                        {{ form.errors }}
                     </div>
                 {% endif %}
                 {% if success_message %}
