--- a/staff/templates/staff/pages/staff_profiles.html
+++ b/staff/templates/staff/pages/staff_profiles.html
@@ -7,9 +7,8 @@
             <a href="/media/{{staff.profile_pic}}"><div class="thumb-lg member-thumb mx-auto"><img src="/media/{{staff.profile_pic}}" class="rounded-circle img-thumbnail img-fluid" alt="profile-image"></div></a>
             <div class="">
                 
-                <h4>{{staff.username}}</h4>
+                <h4>{{staff.email}}</h4>
 
-                <p class="text-muted">{{staff.email}}</p>
             </div>
         </div>
     </div>
