--- a/staff/templates/staff/staff_base_layout/layout.html
+++ b/staff/templates/staff/staff_base_layout/layout.html
@@ -324,7 +324,7 @@
                                     <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         
-                                        <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.username}}</span>
+                                        <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.email}}</span>
                                         <img class="img-profile rounded-circle"
                                             src="/media/{{user.staff.profile_pic}}">
                                     </a>
