--- a/doctors/templates/doctors/auth/login.html
+++ b/doctors/templates/doctors/auth/login.html
@@ -54,7 +54,7 @@
                          <label for="inputPassword" class="col-sm-3 col-form-label text-end"></label>
                          <div class="col-sm-8">
                            <input type="submit" class="btn bg-success form-control" value = "Login">
-                           <a class = "forgot-password" href="">Forgot Password?</a>
+                           <a class = "forgot-password" href="{% url 'doctors:password_reset_view' %}">Forgot Password?</a>
                          </div>
                        </div>
                    </form>
