Creating doctors list template in doctors dashboard.

--- a/doctors/templates/doctors/auth/password_reset.html
+++ b/doctors/templates/doctors/auth/password_reset.html
@@ -460,7 +460,7 @@
               </div>  <br>
             </div> 
             
-            <a href="{% url 'staff:staff_login_view' %}"><button type="button" class="action-button previous_button">Back</button></a>
+            <a href="{% url 'doctors:doctors_login_view' %}"><button type="button" class="action-button previous_button">Back</button></a>
             <button type="button"  class="next action-button">Send OTP</button>  
           </fieldset>
           <fieldset>
@@ -693,7 +693,7 @@
                   },
                   success:function(){
                     $('#error_passowrd').html('');
-                    location.href = "{% url 'staff:staff_login_view' %}";
+                    location.href = "{% url 'doctors:doctors_login_view' %}";
                   }
               });
             }else{
