--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -115,7 +115,7 @@
                 <div id="collapseUtilities2" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="{% url 'doctors:staff_list_view' %}">Doctors List</a>
+                        <a class="collapse-item" href="{% url 'doctors:doctors_list_view' %}">Doctors List</a>
                         <a class="collapse-item" href="{% url 'doctors:add_doctor_view' %}">Add Doctor</a>
                         <a class="collapse-item" href="">Animations</a>
                         <a class="collapse-item" href="">Other</a>
