--- a/doctors/templates/doctors/pages/doctors_list.html
+++ b/doctors/templates/doctors/pages/doctors_list.html
@@ -3,14 +3,15 @@
 <div class="container">
   <div class="row">
     <div class="col-md-5">
-      <h2 class = "page-header" style = "padding: 20px;">Staff List</h2>
+      <h2 class = "page-header" style = "padding: 20px;">Doctors List</h2>
     </div>
     <div class="col-md-3" style="padding: 10px;">
       <div class="sort-element">
         <h4>Sort By</h4>
-          <a href="{% url 'doctors:staff_list_view' %}?filter={{filter}}&orderby=first_name"style="margin-top: 25px;">First Name</a> <b>&nbsp;|&nbsp;</b>
-          <a href="{% url 'doctors:staff_list_view' %}?filter={{filter}}&orderby=last_name"style="margin-top: 25px;">Last Name</a><b>&nbsp;|&nbsp;</b>
-          <a href="{% url 'doctors:staff_list_view' %}?filter={{filter}}&orderby=address_barangay"style="margin-top: 25px;">Barangay</a>
+        <a href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&orderby=id"style="margin-top: 25px;">ID</a><b>&nbsp;|&nbsp;</b>
+        <a href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&orderby=first_name"style="margin-top: 25px;">First Name</a> <b>&nbsp;|&nbsp;</b>
+        <a href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&orderby=last_name"style="margin-top: 25px;">Last Name</a>
+          
       </div>  
   </div>
     <div class="col-md-4" >
@@ -35,33 +36,33 @@
                   {% endfor %}
             {% endif %}
             
-            {% if staff_list %}
+            {% if user_list %}
             <table class="table manage-candidates-top mb-0 table-striped">
               <thead>
                 <tr>
-                  <th>Staff Name</th>
+                  <th>Doctors Name</th>
                   <th class="text-center">Contact Number</th>
                   <th class="action text-right">Action</th>
                 </tr>
               </thead>
               <tbody>
-                {% for staff in staff_list %}
+                {% for user in user_list %}
                   <tr class="candidates-list">
                     <td class="title">
                       <div class="thumb">
-                        <a href="/media/{{staff.profile_pic}}"><img class="img-fluid" style="height: 70px; width: 70px; border-radius: 50%;" src="/media/{{staff.profile_pic}}" alt=""></a>
+                        <a href="/media/{{user.admin.profile_pic}}"><img class="img-fluid" style="height: 70px; width: 70px; border-radius: 50%;" src="/media/{{user.admin.profile_pic}}" alt=""></a>
                       </div>
                       <div class="candidate-list-details">
                         <div class="candidate-list-info">
                           <div class="candidate-list-title">
-                            <h5 class="mb-0"><a href="{% url 'doctors:staff_profile_view' %}?id={{staff.auth_user_id.id}}">{{staff.auth_user_id.first_name}} {{staff.auth_user_id.last_name}}</a></h5>
+                            <h5 class="mb-0"><a href="{% url 'doctors:staff_profile_view' %}?id={{staff.auth_user_id.id}}">{{user.first_name}} {{user.last_name}}</a></h5>
                           </div>
                         </div>
                       </div>
                     </td>
                     <td class="candidate-list-favourite-time text-center">
                       <div style="margin-top:30px">
-                        <span class="candidate-list-time order-1" >{{staff.contact_number}}</span>
+                        <span class="candidate-list-time order-1" >{{user.admin.contact_number}}</span>
                       </div>
                     </td>
                     <td>
@@ -85,15 +86,15 @@
             <nav aria-label="Page navigation example">
               <ul class="pagination">
                 {% if page_obj.has_previous%}
-                  <li class="page-item"><a class="page-link" href="{% url 'doctors:staff_list_view' %}?filter={{filter}}&ordeyby={{orderby}}&page={{page_obj.previous_page_number}}">Previous</a></li>
+                  <li class="page-item"><a class="page-link" href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&ordeyby={{orderby}}&page={{page_obj.previous_page_number}}">Previous</a></li>
                 {% else %}
                   <li class="page-item disabled" ><a class="page-link" href="">Previous</a></li>
                 {% endif %}
                 {% for i in paginator.page_range %}
-                  <li class="page-item"><a class="page-link" href="{% url 'doctors:staff_list_view' %}?filter={{filter}}&orderby={{orderby}}&page={{i}}">{{i}}</a></li>
+                  <li class="page-item"><a class="page-link" href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&orderby={{orderby}}&page={{i}}">{{i}}</a></li>
                 {% endfor %}
                 {% if page_obj.has_next %}
-                  <li class="page-item"><a class="page-link" href="{% url 'doctors:staff_list_view' %}?filter={{filter}}&orderby={{orderby}}&page={{page_obj.next_page_number}}">Next</a></li>
+                  <li class="page-item"><a class="page-link" href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&orderby={{orderby}}&page={{page_obj.next_page_number}}">Next</a></li>
                 {% else %}
                   <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
                 {% endif %}
