Initial Configuration in staff dashboard template.

--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -353,7 +353,7 @@
                                             <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                            Update Account
                                         </a>
-                                        <a class="dropdown-item" href="#">
+                                        <a class="dropdown-item" href="{% url 'doctors:doctors_profile_view' %}?id={{user.id}}">
                                             <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                            View Profile
                                         </a>
