--- a/doctors/templates/doctors/pages/customer_profile.html
+++ b/doctors/templates/doctors/pages/customer_profile.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="subject" class="col-form-label">Subject:</label>
-                        <input type="text" class="form-control" value = "" id="subject" required>
+                        <input type="text" class="form-control" maxlength="25" value = "" id="subject" required>
                     </div>
                     <div class="mb-3">
                     <label for="message" class="col-form-label">Message:</label>
