--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -344,7 +344,7 @@
                                         
                                         <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.username}}</span>
                                         <img class="img-profile rounded-circle"
-                                            src="/media/{{user.staff.profile_pic}}">
+                                            src="/media/{{user.admin.profile_pic}}">
                                     </a>
                                     <!-- Dropdown - User Information -->
                                     <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
