Creating blog list template in doctors dashboard.

--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -131,7 +131,7 @@
                 <div id="collapseUtilities3" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="">Blog List</a>
+                        <a class="collapse-item" href="{% url 'doctors:blog_list_view' %}">Blog List</a>
                         <a class="collapse-item" href="{% url 'doctors:add_blog_view' %}">Add Blog</a>
                         <a class="collapse-item" href="">Animations</a>
                         <a class="collapse-item" href="">Other</a>
