--- a/staff/templates/staff/pages/doctors_list.html
+++ b/staff/templates/staff/pages/doctors_list.html
@@ -1,4 +1,4 @@
-{% extends 'doctors/doctors_base_layout/layout.html' %}
+{% extends 'staff/staff_base_layout/layout.html' %}
 {% block content %}
 <div class="container">
   <div class="row">
@@ -8,9 +8,9 @@
     <div class="col-md-3" style="padding: 10px;">
       <div class="sort-element">
         <h4>Sort By</h4>
-        <a href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&orderby=id"style="margin-top: 25px;">ID</a><b>&nbsp;|&nbsp;</b>
-        <a href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&orderby=first_name"style="margin-top: 25px;">First Name</a> <b>&nbsp;|&nbsp;</b>
-        <a href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&orderby=last_name"style="margin-top: 25px;">Last Name</a>
+        <a href="{% url 'staff:doctors_list_view' %}?filter={{filter}}&orderby=id"style="margin-top: 25px;">ID</a><b>&nbsp;|&nbsp;</b>
+        <a href="{% url 'staff:doctors_list_view' %}?filter={{filter}}&orderby=first_name"style="margin-top: 25px;">First Name</a> <b>&nbsp;|&nbsp;</b>
+        <a href="{% url 'staff:doctors_list_view' %}?filter={{filter}}&orderby=last_name"style="margin-top: 25px;">Last Name</a>
           
       </div>  
   </div>
@@ -26,15 +26,6 @@
   </div>
   <div class="container" style="height: 700px;">
         <div class="row">
-            {% if messages %}
-                  {% for message in messages %}
-                      {% if message.tags == "success" %}
-                          <div class="alert alert-success">
-                              {{message}}
-                          </div>
-                      {% endif %}
-                  {% endfor %}
-            {% endif %}
             
             {% if user_list %}
             <table class="table manage-candidates-top mb-0 table-striped">
@@ -86,15 +77,15 @@
             <nav aria-label="Page navigation example">
               <ul class="pagination">
                 {% if page_obj.has_previous%}
-                  <li class="page-item"><a class="page-link" href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&ordeyby={{orderby}}&page={{page_obj.previous_page_number}}">Previous</a></li>
+                  <li class="page-item"><a class="page-link" href="{% url 'staff:doctors_list_view' %}?filter={{filter}}&ordeyby={{orderby}}&page={{page_obj.previous_page_number}}">Previous</a></li>
                 {% else %}
                   <li class="page-item disabled" ><a class="page-link" href="">Previous</a></li>
                 {% endif %}
-               
+                
                   <li class="page-item disabled"><a class="page-link" href="">Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}</a></li>
-            
+          
                 {% if page_obj.has_next %}
-                  <li class="page-item"><a class="page-link" href="{% url 'doctors:doctors_list_view' %}?filter={{filter}}&orderby={{orderby}}&page={{page_obj.next_page_number}}">Next</a></li>
+                  <li class="page-item"><a class="page-link" href="{% url 'staff:doctors_list_view' %}?filter={{filter}}&orderby={{orderby}}&page={{page_obj.next_page_number}}">Next</a></li>
                 {% else %}
                   <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
                 {% endif %}
