--- a/staff/templates/staff/staff_base_layout/layout.html
+++ b/staff/templates/staff/staff_base_layout/layout.html
@@ -114,7 +114,7 @@
                 <div id="collapseUtilities2" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="{% url 'doctors:doctors_list_view' %}">Doctors List</a>
+                        <a class="collapse-item" href="{% url 'staff:doctors_list_view' %}">Doctors List</a>
                        
                         <a class="collapse-item" href="">Animations</a>
                         <a class="collapse-item" href="">Other</a>
