--- a/customers/templates/base_layout/layout.html
+++ b/customers/templates/base_layout/layout.html
@@ -16,7 +16,11 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
-    <title>{{ title }}</title>
+    <title>
+      {% block title %}
+
+      {% endblock %}
+    </title>
     <link rel="shortcut icon" type="image" href="{% static 'title_logo/title_logo.png' %}">
     <script src="{% static 'js/layout.js' %}"></script>
 </head>
@@ -30,7 +34,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link nav-menu_font_size" id = "home" href="{% url 'customers:home_view' %}">Home</a>
-              <a class="nav-link nav-menu_font_size" href="#">Blogs</a>
+              <a class="nav-link nav-menu_font_size" href="{% url 'customers:blogs_view' %}">Blogs</a>
               <a class="nav-link nav-menu_font_size" href="#">Services</a>
               <a class="nav-link nav-menu_font_size" href="/appointments/" tabindex="-1">Appointments</a>
               <a class="nav-link nav-menu_font_size" style = "margin-right:20px" href="{% url 'customers:dashboard_view' %}">Accounts</a>
@@ -52,9 +56,9 @@
 
           {% endblock %}
       </div>
-</body>
+</body><br>
 <footer>
-    <div class="simple-footer text-center">
+    <div class="simple-footer text-center bg-secondary" style = "height: 100px;"> <br>
         Copyright &copy; EliteBuilders 2021
     </div>
 </footer>
