--- a/customers/templates/pages/home.html
+++ b/customers/templates/pages/home.html
@@ -1,5 +1,8 @@
 {% extends '.\base_layout/layout.html' %}
 {% load static %}
+{% block title %}
+  Home
+{% endblock %}
 {% block content %}
 
 <div class="container-fluid home-background" style = "background-image: url('{% static 'Images/home-background.jpg' %}');">
