--- a/customers/templates/base_layout/layout.html
+++ b/customers/templates/base_layout/layout.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/jquery.datetimepicker.css' %}">
     {% block style %}
 
       {% endblock %}
@@ -27,7 +28,7 @@
     <link rel="shortcut icon" type="image" href="{% static 'title_logo/title_logo.png' %}">
     <script src="{% static 'js/layout.js' %}"></script>
 </head>
-    <body>
+    <body style = "margin: 0;">
     <nav class="navbar navbar-expand-lg navbar-light sticky-top bg-color">
         <div class="container">
           <img class = "logo" src="{% static 'Images/LOGO.png' %}" alt="BEASTFRIEND LOGO">
