Initial for customers panel layout.

--- a/customers/templates/pages/appointment.html
+++ b/customers/templates/pages/appointment.html
@@ -1,4 +1,4 @@
-{% extends '.\base_layout/layout.html' %}
+{% extends '.\base_layout/new_layout.html' %}
 {% load static %}
 {% block style %}
   <style>
@@ -83,7 +83,7 @@
     Appointment
 {% endblock %}
 {% block content %}
-<br><br><br>
+<br><br><br><br><br>
   <div id="container">
     <!--This is a division tag for body container-->
     <div id="body_header">
