--- a/customers/templates/pages/blogs.html
+++ b/customers/templates/pages/blogs.html
@@ -1,10 +1,10 @@
-{% extends '.\base_layout/layout.html' %}
+{% extends '.\base_layout/new_layout.html' %}
 {% load static %}
 {% block title %}
   Blogs
 {% endblock %}
 {% block content %}
-
+<br><br><br><br><br>
 <div class="container-fluid">
         <h1 class = "page-header" style="height: 70px;">Blogs</h1>
   <div class="row">
