--- a/customers/templates/pages/home.html
+++ b/customers/templates/pages/home.html
@@ -1,4 +1,4 @@
-{% extends '.\base_layout/layout.html' %}
+{% extends '.\base_layout/new_layout.html' %}
 {% load static %}
 {% block title %}
   Home
