--- a/customers/templates/auth/signup.html
+++ b/customers/templates/auth/signup.html
@@ -1,11 +1,16 @@
-{% extends "base_layout/layout.html" %}
-
-{% block title %}Create an Account{% endblock %}
+{% extends "base_layout/new_layout.html" %}
+{% load static %}
+{% block title %}
+    Create an Account
+{% endblock %}
 
 
 {% block content %}
-<br> 
 <br>
+<br> <br>
+<br>
+<br>
+
 <div class="container">
     <div class="container col-lg-6">
         <form method="POST" enctype="multipart/form-data" class="form-group bg-light" style = "border-radius:10px; padding: 20px">
@@ -47,4 +52,11 @@
 <div class="container" style = "margin-top:130px">
 
 </div>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+<script src="{% static 'js/jquery.js' %}"></script>
 {% endblock %}
