--- a/customers/templates/base_layout/new_layout.html
+++ b/customers/templates/base_layout/new_layout.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" type="image" href="{% static 'title_logo/title_logo.png' %}">
     <style>
       .logo{
-        height: 30px;
+        height: 50px;
         width: 300px;
       }
       .font {
@@ -56,56 +56,51 @@
             <a class="nav-link font" href="{% url 'customers:blogs_view' %}">Blogs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link font" href="{% url 'customers:appointment_view' %}">Appointments</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle font" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item font" href="#">Action</a></li>
-              <li><a class="dropdown-item font" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item font" href="#">Something else here</a></li>
-            </ul>
+            <a class="nav-link font" href="{% url 'customers:appointment_view' %}">Appointment</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled font" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-link font" href="">Services</a>
           </li>
-          <li class="nav-item dropdown no-arrow font">
-            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                
-                <span class="mr-2 d-none d-lg-inline small font">{{user.username}}</span>
-                <img class="img-profile rounded-circle" style = "height: 30px;width: 30px;border-radius: 50%;"
-                    src="/media/{{user.admin.profile_pic}}">
-            </a>
-            <!-- Dropdown - User Information -->
-            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="{% url 'staff:account_update_view' user.id %}">
-                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                   Update Account
+          {% if request.user.is_authenticated %}
+              <li class="nav-item dropdown no-arrow font">
+                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    
+                    <span class="mr-2 d-none d-lg-inline small font">{{user.username}}</span>
+                    <img class="img-profile rounded-circle" style = "height: 30px;width: 30px;border-radius: 50%;"
+                        src="/media/{{user.customer.profile_pic}}">
                 </a>
-                <a class="dropdown-item" href="{% url 'staff:staff_profile_view' %}?id={{ user.id }}">
-                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                   View Profile
-                </a>
-                <!-- <a class="dropdown-item" href="#">
-                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Settings
-                </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Activity Log
-                </a> -->
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Logout
-                </a>
-            </div>
-        </li>
+                <!-- Dropdown - User Information -->
+                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                    aria-labelledby="userDropdown">
+                    <a class="dropdown-item" href="{% url 'staff:account_update_view' user.id %}">
+                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                      Update Account
+                    </a>
+                    <a class="dropdown-item" href="{% url 'staff:staff_profile_view' %}?id={{ user.id }}">
+                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                      View Profile
+                    </a>
+                    <!-- <a class="dropdown-item" href="#">
+                        <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                        Settings
+                    </a>
+                    <a class="dropdown-item" href="#">
+                        <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                        Activity Log
+                    </a> -->
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'customers:logout_view' %}" >
+                        <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                        Logout
+                    </a>
+                </div>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link font" href="{% url 'customers:login_view' %}">Account</a>
+            </li>
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -115,7 +110,7 @@
 
         {% endblock %}
          <!-- Footer -->
-         <footer class="sticky-footer bg-white">
+         <footer class="sticky-footer" style = "background-color: grey; height: 150px;">
           <div class="container my-auto">
               <div class="copyright text-center my-auto">
                   <span>Copyright &copy; EliteBuilders 2021</span>
