--- a/customers/templates/pages/appointment.html
+++ b/customers/templates/pages/appointment.html
@@ -3,7 +3,7 @@
 {% block style %}
   <style>
     
-      #body_header
+      #appointment-header
       {
         width:auto;
         margin:0px auto;
@@ -11,7 +11,7 @@
         font-size:25px;
       }
       form {
-        max-width: 300px;
+        max-width: 480px;
         margin: 10px auto;
         padding: 10px 20px;
         background: #f4f7f8;
@@ -39,30 +39,9 @@
         box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
         margin-bottom: 30px;
       }
-
-      button {
-        padding: 19px 39px 18px 39px;
-        color: #FFF;
-        background-color: #4bc970;
-        font-size: 18px;
-        text-align: center;
-        font-style: normal;
-        border-radius: 5px;
-        width: 100%;
-        border: 1px solid #3ac162;
-        border-width: 1px 1px 3px;
-        box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
-        margin-bottom: 10px;
-      }
-
       fieldset {
         margin-bottom: 30px;
         border: none;
-      }
-
-      legend {
-        font-size: 1.4em;
-        margin-bottom: 10px;
       }
 
       label {
@@ -74,9 +53,7 @@
         font-weight: 300;
         display: inline;
       }
-        form {
-          max-width: 480px;
-        }
+      
   </style>
 {% endblock %}
 {% block title %}
@@ -84,9 +61,9 @@
 {% endblock %}
 {% block content %}
 <br><br><br><br><br>
-  <div id="container">
+  <div id="container-fluid">
     <!--This is a division tag for body container-->
-    <div id="body_header">
+    <div id="appointment-header">
       <!--This is a division tag for body header-->
       <h1>Appointment Request Form</h1>
       <div id = "instruction" class = "text-info" style = "margin:0px auto; font-size: 16px; max-width: 500px;">Please Select Date And Time To Request An Appointment</div>
