--- a/customers/templates/pages/blogs.html
+++ b/customers/templates/pages/blogs.html
@@ -1,11 +1,18 @@
 {% extends '.\base_layout/new_layout.html' %}
 {% load static %}
+{% block style %}
+  <style>
+    body{
+      background-color: 	#DCDCDC;
+    }
+  </style>
+{% endblock %}
 {% block title %}
   Blogs
 {% endblock %}
 {% block content %}
-<br><br><br><br><br>
-<div class="container-fluid">
+<br><br><br>
+<div class="container-fluid" style="background-color: 	#FAF0E6"><br><br>
         <h1 class = "page-header" style="height: 70px;">Blogs</h1>
   <div class="row">
     <div class="container col-md-12">
@@ -23,11 +30,11 @@
                       <h2>{{blog.illness_name}}</h2>
                     </div>
                     <div class="article-description">
-                        <h6 class = "text-info">Description</h6>
+                        <h6 class = "" style="color: #00008B;">Description</h6>
                       </div>
                     <p onclick = 'show("{{blog.illness_description}}")' class="d-inline-block text-truncate" style="max-width: 300px;">{{blog.illness_description}}</p>
                     <div class="article-prevention">
-                        <h6 class = "text-info">Prevention</h6>
+                        <h6 class = "" style="color: #00008B;">Prevention</h6>
                       </div>
                     <p onclick = 'show("{{blog.illness_prevention}}")' class="d-inline-block text-truncate" style="max-width: 300px;">{{blog.illness_prevention}}</p>
                     <div class="article-user">
@@ -49,7 +56,7 @@
             </div>
         {% endif %}
    </div>
-  </div>
+  </div><br><br>
 </div>
 <!-- read more  modal -->
 <div class="modal fade" id="read_more" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -70,7 +77,9 @@
     </div>
   </div>
   <!-- end modal -->
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'js/jquery.js' %}"></script>
 
   <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
